# crew

teach/: README.md  pyproject.toml  report.md
teach/db/: chroma.sqlite3
teach/src/teach/: crew.py  main.py
teach/src/teach/config/: agents.yaml  tasks.yaml
teach/src/teach/tools/: arduino.py  custom_tool.py  p.py  pareto.py
teach/tmp/: tmp.ino
