[project]
name = "teach"
version = "0.1.0"
description = "teach using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
teach = "teach.main:run"
run_crew = "teach.main:run"
train = "teach.main:train"
replay = "teach.main:replay"
test = "teach.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
